--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/57da77bccf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./src/css/styles.css">
     <script defer src="./src/js/script.js"></script>
     <title>Farmers Forum</title>
@@ -11,6 +12,44 @@
 <body>
     <div class="container">
         <h1>Farmers Forum</h1>
+        <div class="content">
+            <h3>Header</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, libero quod placeat adipisci similique at, 
+                dolorem consequatur magnam corporis ratione, per assumenda facere unde. Dolores praesentium possimus quis eligendi. Officiis?
+            </p>
+            <div class="icons">
+                <p><span><i class="fa-regular fa-thumbs-up"></i></span> 2K Likes</p>
+                <p></i> <i class="fa-regular fa-message"></i> 20 Comments</p>
+            </div>
+            <div class="comments">
+                <form class="form" id="form">
+                    <input type="text" id="comment" class="comment">
+                    <input type="submit" name="" id="comment-button" class="comment-button">
+                </form>
+                <li>comment</li>
+                <li>comment</li>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Header</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, libero quod placeat adipisci similique at, 
+                dolorem consequatur magnam corporis ratione, per assumenda facere unde. Dolores praesentium possimus quis eligendi. Officiis?
+            </p>
+            <div class="icons">
+                <p><span><i class="fa-regular fa-thumbs-up"></i></span> 2K Likes</p>
+                <p></i> <i class="fa-regular fa-message"></i> 20 Comments</p>
+            </div>
+            <div class="comments">
+                <form class="form" id="form">
+                    <input type="text" id="comment" class="comment">
+                    <input type="submit" name="" id="comment-button" class="comment-button">
+                </form>
+                <li>comment</li>
+                <li>comment</li>
+            </div>
+        </div>
     </div>
 </body>
 </html>
