add submit section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
     <div class="container">
         <h1>Digital Farmers Forum</h1>
+        <div class="submit">
+            <div class="icon">
+                <i class='fas fa-marker' style='font-size:24px'></i>
+            </div>
+            <div class="question">
+                What do you want to ask or share?
+            </div>
+        </div>
         <div class="contents">
             
         </div>
