--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <form class="form" id="form">
                         <div class="input-group">
                             <label for="title">Title:</label>
-                            <input type="text" id="title" class="title">
+                            <input type="text" id="post_title" class="title">
                         </div>
                         <div class="input-group">
                             <label for="description">Description:</label>
