add reset button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <input type="textarea" id="description" class="description">
                         </div>
                         <div class="input-group btns">
-                            <input type="submit" id="cancel" class="cancel" value="cancel">
+                            <input type="reset" id="cancel" class="cancel" value="cancel">
                             <input type="submit" value="Ask Question" id="ask">
                         </div>
                     </form>
