add image field on creat post form

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                             <label for="description">Description:</label>
                             <input type="textarea" id="description" class="description">
                         </div>
+                        <div class="input-group">
+                            <label for="image">Image:</label>
+                            <input type="text" id="image" class="image">
+                        </div>
                         <div class="input-group btns">
                             <input type="reset" id="cancel" class="cancel" value="cancel">
                             <input type="submit" value="Ask Question" id="ask">
