--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                     <form class="form" id="form">
                         <div class="input-group">
                             <label for="title">Title:</label>
-                            <input type="text" id="post_title" class="title">
+                            <input type="text" id="post_title" class="title" required>
                         </div>
                         <div class="input-group">
                             <label for="description">Description:</label>
-                            <input type="textarea" id="description" class="description">
+                            <input type="textarea" id="description" class="description" required>
                         </div>
                         <div class="input-group">
                             <label for="image">Image:</label>
-                            <input type="text" id="image" class="image">
+                            <input type="text" id="image" class="image" required>
                         </div>
                         <div class="input-group btns">
                             <input type="reset" id="cancel" class="cancel" value="cancel">
