add media queries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Digital Farmers Forum</h1>
         <div class="submit">
             <div class="icon">
-                <i class='fas fa-marker' style='font-size:24px'></i>
+                <i class='fas fa-marker'></i>
             </div>
             <div class="question" id="question">
                 What do you want to ask or share?
